Added implementation for IE browser